refactor: reorganize project folder structure
DTOs reorganized into proper subpackages:
  dto/request/ ← LoginRequest, FeedbackRequest (was FeedbackDto),
                  OrderRequest, OrderItemRequest, StatusUpdateRequest,
                  MenuItemRequest, StockItemRequest, TableRequest
  dto/response/ ← LoginResponse, FeedbackResponseDTO, OrderResponseDTO,
                   OrderItemResponseDTO, MenuItemSimpleDTO,
                   DashboardStatsResponse, StockItemResponse, TableResponse
  dto/ (root)  ← ApiResponse, MenuItemDto, IngredientDto (shared/dual-use)

SQL files moved from project root to sql/:
  database_init.sql, migration_*.sql (5 files)

Updated all imports across controllers, services, and tests.
Fixed Collectors.toList() → .toList() in OrderResponseDTO.
Renamed FeedbackDto → FeedbackRequest for naming consistency.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>